# helico

./: .gitignore  AGENTS.md  CLAUDE.md  LOG.md  README.md  TRAINING.md  ci.py  generate_foldbench_msas.py  mkdocs.yml  pyproject.toml
.agents/project/: 20260422_experiment_system_design.md
.agents/skills/analyze-results/: SKILL.md
.agents/skills/estimate-cost/: SKILL.md
.agents/skills/run-experiment/: SKILL.md
.github/: experiments.yaml
.github/ISSUE_TEMPLATE/: experiment.md
.github/workflows/: claude-code-review.yml  claude.yml  docs-build.yml  experiment-agent.yml  regenerate-docs.yml  test.yml
docs/: benchmarks.md  index.md  releases.md
docs/experiments/: index.md
experiments/: AGENTS.md  README.md  TEMPLATE.md
experiments/exp4_baseline_protenix_v1/: README.md
experiments/exp4_baseline_protenix_v1/data/: comparison_vs_published.csv  dockq_per_target.csv  lddt_per_target.csv  published_baselines.csv  summary.csv
experiments/exp5_v1-finetune-01/: README.md
experiments/exp5_v1-finetune-01/data/: bench_ft_summary.csv  delta_vs_exp4.csv  val_metrics.csv  wandb_history.csv
experiments/exp8_ab_ag_triage/: README.md
experiments/exp8_ab_ag_triage/data/: all_n5_vs_n25.csv  exp4_baseline_n5.csv  helico_vs_upstream_summary.csv  oracle_vs_ranked.csv  per_sample_scores.csv  triage_n5_vs_n25.csv
experiments/exp8_ab_ag_triage/data/upstream/: upstream_oracle_vs_ranked.csv  upstream_per_sample_scores.csv
modal/: bench.py  bench_upstream.py  ci.py  preprocess_on_modal.py  probe_attention_shapes.py  probe_diffusion_samples.py  sync_train_data.py  train.py  upload_processed.py  upload_to_hf.py
notebooks/: viz.ipynb
scripts/: compare_protenix.py  load_protenix.py  prefetch_foldbench_msas.py  upload_msa_cache.py  upload_to_hf.py  upload_to_hf.sh
scripts/pm/: diff_activations.py  diff_dumps.py  inspect_dumps.py  itemize_experiments.py  modal_prices.yaml  plot_bench.py  regenerate_snapshots.py  run_experiment.py  scaffold_experiment.py  score_upstream.py
src/helico/: __init__.py  bench.py  data.py  eval_metrics.py  experiment.py  hf_publish.py  load_protenix.py  model.py  msa_server.py  protenix_compat.py  train.py  upstream_protenix.py
src/helico/model/: __init__.py  blocks.py  config.py  diffusion.py  dumper.py  features.py  heads.py  helico.py  input_embedder.py  losses.py  metrics.py  msa.py  pairformer.py  template.py  triangle.py
tests/: test_attention_shapes.py  test_data.py  test_diffusion_pair_source.py  test_eval_metrics.py  test_model.py  test_snapshots.py
tests/data/: 1mbn.a3m  README.md
tests/data/snapshots/: build_helpers.npz  diffusion.npz  trunk.npz
