[project]
name = "helico"
version = "0.1.0"
description = "AlphaFold3 clone for experimentation"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7",
    "cuequivariance-torch>=0.8",
    "cuequivariance-ops-torch-cu12>=0.8",
    "biopython>=1.80",
    "numpy",
    "scipy",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
helico-train = "helico.train:main"
helico-infer = "helico.train:infer_main"
helico-preprocess = "helico.data:preprocess_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
