[project]
name = "helico"
version = "0.1.0"
description = "AlphaFold3 clone for experimentation"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.10,<2.11",
    "cuequivariance-torch>=0.8",
    "cuequivariance-ops-torch-cu12>=0.8",
    "biopython>=1.80",
    "numpy",
    "scipy",
    "pyyaml>=6.0",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "modal",
]
bench = [
    "tmtools",
    "DockQ",
    "tqdm",
]

[project.scripts]
helico-train = "helico.train:main"
helico-infer = "helico.train:infer_main"
helico-preprocess = "helico.data:preprocess_main"
helico-bench = "helico.bench:main"
helico-download = "helico.data:download_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
