[project]
name = "helico"
version = "0.1.0"
description = "AlphaFold3 clone for experimentation"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.10,<2.11",
    # Pin cuequivariance to 0.8.x — 0.10 broke bench inference with
    # "cuDNN Frontend error: No valid execution plans built" on H100.
    # The bench_results_v1_* runs from 2026-04-19/20 used 0.8.x.
    "cuequivariance-torch>=0.8,<0.9",
    "cuequivariance-ops-torch-cu12>=0.8,<0.9",
    "biopython>=1.80",
    "numpy>=2.0",
    "scipy",
    "pyyaml>=6.0",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "modal",
]
bench = [
    "tmtools",
    "DockQ",
    "tqdm",
    # Build-time deps for DockQ's cython extension, since [tool.uv]
    # disables build isolation for DockQ (see note below).
    "cython",
    "setuptools>=68",
]
experiments = [
    "jupytext>=1.15",
    "nbconvert>=7",
    "jupyter",
    "pandas",
    "matplotlib",
    "wandb",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
helico-train = "helico.train:main"
helico-infer = "helico.train:infer_main"
helico-preprocess = "helico.data:preprocess_main"
helico-bench = "helico.bench:main"
helico-download = "helico.data:download_main"
helico-publish = "helico.hf_publish:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helico"]

[tool.uv]
# DockQ 2.1.3 declares `numpy<2.0` but actually imports and runs fine on
# numpy>=2.0 (verified locally). The Helico data pipeline's CCD cache on
# HF is pickled with numpy 2.x internals, so scoring code and Modal
# workers MUST use numpy 2. Override DockQ's stale upper pin.
override-dependencies = [
    "numpy>=2.0",
]
# DockQ ships a cython extension that, if built via the sdist's declared
# build-isolation env (which pins numpy<2), links against numpy 1 ABI and
# fails to import under numpy 2. Force no-binary + no-build-isolation so
# the build runs in our project's env (where numpy 2 is installed) and
# links correctly.
no-binary-package = ["dockq"]
no-build-isolation-package = ["dockq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
